Update tinh diem

--- a/views/createBaiDoc.handlebars
+++ b/views/createBaiDoc.handlebars
@@ -268,7 +268,13 @@
 
     <div class="form-group row">
         <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Gui</button>
+            <button onclick="myFunction()" pe="submit" class="btn btn-primary">Gui</button>
         </div>
     </div>
 </form>
+
+<script>
+    function myFunction() {
+        alert("Đã cập nhật bài đọc")
+    }
+</script>
