--- a/views/createDienTu.handlebars
+++ b/views/createDienTu.handlebars
@@ -2,7 +2,7 @@
 <h1>Điền Từ</h1>
 
 <form action="" method="post">
-    <form>
+    <div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Câu hỏi</label>
             <div class="col-sm-10">
@@ -58,9 +58,15 @@
 
         <div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary">Gui</button>
+                <button onclick="myFunction()" type="submit" class="btn btn-primary">Gui</button>
             </div>
         </div>
-    </form>
+    </div>
 
 </form>
+
+<script>
+    function myFunction() {
+        alert("Đã cập nhật điền từ")
+    }
+</script>
