--- a/views/createTracNghiem.handlebars
+++ b/views/createTracNghiem.handlebars
@@ -57,9 +57,15 @@
 
         <div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary">Gui</button>
+                <button onclick="myFunction()" type="submit" class="btn btn-primary">Gui</button>
             </div>
         </div>
     </form>
 
 </form>
+
+<script>
+    function myFunction() {
+        alert("Cập nhật trắc nghiệm")
+    }
+</script>
