--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,3 +9,10 @@
 <h1>
     <a href="http://localhost:5000/createbaidoc">Nhập bài đọc</a>
 </h1>
+
+<form action="" method="post">
+    <input type="text" name="username" placeholder="username">
+    <input type="text" name="password" placeholder="password" id="">
+    <button type="submit">Gui</button>
+</form>
+<h1>username : {{username}}</h1>
