--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,7 +10,7 @@
     <a href="http://localhost:5000/createbaidoc">Nhập bài đọc</a>
 </h1>
 
-<form action="" method="post">
+<form action="/login" method="post">
     <input type="text" name="username" placeholder="username">
     <input type="text" name="password" placeholder="password" id="">
     <button type="submit">Gui</button>
